--- a/sass/components/_choix_plats_restos.scss
+++ b/sass/components/_choix_plats_restos.scss
@@ -17,7 +17,7 @@
         font-family: shrikhand;
         font-size: 24px;
         font-weight: 500;
-        padding-top: nth($list: $margin, $n: 8);
+        padding-top: nth($list: $padding, $n: 8);
         padding-left: nth($list: $padding, $n: 3);
         margin: 0;
     }
