--- a/css/styles.css
+++ b/css/styles.css
@@ -68,6 +68,9 @@
   background-color: rgba(231, 228, 228, 0.6509803922);
   padding: 20px;
 }
+.list-resto h3 {
+  font-size: 21px;
+}
 .list-resto .restaurant {
   display: flex;
   flex-direction: column;
@@ -87,7 +90,7 @@
 }
 .list-resto .restaurant__cards .nouveau {
   font-weight: 600;
-  font-size: 15px;
+  font-size: 14px;
   height: 15px;
   color: #069a4b;
   position: absolute;
@@ -114,35 +117,35 @@
 }
 .list-resto .restaurant h5 {
   margin: 0px;
-  font-size: 15px;
+  font-size: 14px;
   font-weight: normal;
 }
 
-.fieldset--entree-1 {
+.cards-menu--entree-1 {
   animation: apparition 4s;
 }
-.fieldset--entree-2 {
+.cards-menu--entree-2 {
   animation: apparition 6s;
 }
-.fieldset--entree-3 {
+.cards-menu--entree-3 {
   animation: apparition 8s;
 }
-.fieldset--plat-1 {
+.cards-menu--plat-1 {
   animation: apparition 12s;
 }
-.fieldset--plat-2 {
+.cards-menu--plat-2 {
   animation: apparition 14s;
 }
-.fieldset--plat-3 {
+.cards-menu--plat-3 {
   animation: apparition 16s;
 }
-.fieldset--dessert-1 {
+.cards-menu--dessert-1 {
   animation: apparition 20s;
 }
-.fieldset--dessert-2 {
+.cards-menu--dessert-2 {
   animation: apparition 22s;
 }
-.fieldset--dessert-3 {
+.cards-menu--dessert-3 {
   animation: apparition 24s;
 }
 
@@ -164,7 +167,7 @@
   animation: check 900ms;
 }
 
-.fieldset:hover h6 {
+.cards-menu:hover h5 {
   animation: prix 0.55s;
   animation-fill-mode: both;
 }
@@ -179,67 +182,72 @@ a {
   cursor: pointer;
   color: #fff;
 }
+a:hover {
+  color: #ff79da;
+}
 
 .fonctionnement {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
   flex-wrap: wrap;
-  padding: 18px;
+  padding-left: 20px;
   margin-bottom: 20px;
 }
 .fonctionnement__title {
   font-weight: 700;
 }
-.fonctionnement .btn-acceuil {
+.fonctionnement__site {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
   flex-wrap: wrap;
+  padding-left: 10px;
 }
-.fonctionnement .btn-acceuil ul {
+.fonctionnement__site ul {
   margin: 0px;
   padding: 0px;
 }
-.fonctionnement .btn-acceuil li {
+.fonctionnement__site li {
   list-style: none;
 }
-.fonctionnement .btn-acceuil__menu {
+
+.explication {
   background-color: rgba(240, 240, 240, 0.4705882353);
   box-shadow: rgba(202, 200, 200, 0.72) 0px 5px 9px;
-  padding: 25px;
+  padding: 26px 24px;
   margin-bottom: 24px;
   border-radius: 16px;
   border: none;
-  width: 83%;
+  width: 78%;
   display: flex;
   flex-direction: row;
   align-items: center;
   gap: 20px;
 }
-.fonctionnement .btn-acceuil__menu .number {
+.explication--3 {
+  background: #f2eafb;
+}
+.explication__number {
   border: 2px solid #9356dc;
   padding: 5px 7px 2px 7px;
   border-radius: 25px;
   margin: 0px;
   position: absolute;
-  left: 7px;
+  left: 15px;
   font-size: 12px;
   background: #9356dc;
   color: #fff;
 }
-.fonctionnement .btn-acceuil__menu .text-number {
-  font-size: 15px;
-}
-.fonctionnement .btn-acceuil__menu--3 {
-  background: #f2eafb;
-}
-.fonctionnement .btn-acceuil__menu .color {
+.explication__icon {
   color: gray;
-  font-size: 16px;
+  font-size: 17px;
 }
-.fonctionnement .btn-acceuil__menu .color--3 {
+.explication__icon--3 {
   color: #9356dc;
+}
+.explication__text {
+  font-size: 14px;
 }
 
 .formulaire {
@@ -249,7 +257,7 @@ a {
 .formulaire .recherche {
   background-color: rgba(231, 228, 228, 0.6509803922);
   box-shadow: inset rgba(195, 188, 188, 0.6509803922) 1px 4px 4px;
-  padding: 16px;
+  padding: 18px;
   display: flex;
   justify-content: center;
 }
@@ -264,7 +272,6 @@ a {
 
 .border-heart {
   position: absolute;
-  margin-top: -4px;
   background-color: initial;
   border: none;
   z-index: 3;
@@ -288,7 +295,6 @@ a {
 .heart-colorer {
   color: white;
   position: absolute;
-  margin-top: -4px;
   background-color: initial;
   border: none;
   z-index: 2;
@@ -301,21 +307,21 @@ a {
   margin-top: 28px;
 }
 
-.heart-div {
-  font-size: 26px;
-  right: 20%;
-  position: absolute;
-}
-
 .heart {
   font-size: 26px;
+  position: absolute;
+  right: 19%;
+  margin-top: -15%;
+  border: none;
+  background: initial;
+  cursor: pointer;
 }
 
 .btn-explorez {
   border: none;
   font-family: "roboto";
   color: #fff;
-  font-size: 15px;
+  font-size: 14px;
   border-radius: 25px;
   width: 206px;
   padding: 14px;
@@ -336,7 +342,7 @@ a {
   border: none;
   font-family: "roboto";
   color: #fff;
-  font-size: 15px;
+  font-size: 14px;
   border-radius: 25px;
   width: 206px;
   padding: 14px;
@@ -368,9 +374,9 @@ a {
 }
 .header-form__title {
   font-family: shrikhand;
-  font-size: 24px;
+  font-size: 26px;
   font-weight: 500;
-  padding-top: 25px;
+  padding-top: 30px;
   padding-left: 20px;
   margin: 0;
 }
@@ -392,32 +398,39 @@ a {
   margin-left: 60px;
 }
 
-.fieldset {
+.cards-menu {
   border: none;
   margin: 14px;
-  padding: 13px;
+  padding: 12px 10px;
   border-radius: 15px;
   box-shadow: rgba(91, 91, 91, 0.5019607843) 0px 0px 20px;
   margin-bottom: 14px;
+  cursor: pointer;
 }
-.fieldset:hover {
+.cards-menu:hover {
   box-shadow: rgba(40, 40, 40, 0.5019607843) 0px 0px 20px;
 }
-.fieldset:hover dt {
-  width: 175px;
+.cards-menu:hover h3 {
+  max-width: 76%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
-.fieldset:hover .btn-check {
+.cards-menu:hover h4 {
+  max-width: 87%;
+}
+.cards-menu:hover .btn-check {
   display: block;
   color: #fff;
   border: none;
   border-radius: 0px 15px 15px 0px;
   background: #99e2d0;
-  padding: 26px 18px;
+  padding: 25px 20px;
   right: 14px;
-  margin-top: -14px;
+  margin-top: -57px;
   position: absolute;
 }
-.fieldset__align-prix {
+.cards-menu__align-prix {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -425,25 +438,31 @@ a {
   padding-top: 4px;
   margin: 0px;
 }
-.fieldset dt {
-  margin: 0px;
-  font-size: 12px;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  width: 212px;
-  white-space: nowrap;
-}
-.fieldset dd {
-  margin: 0px;
-}
-.fieldset h6 {
+.cards-menu h3 {
   margin: 0px;
   font-size: 18px;
+}
+.cards-menu dd {
+  margin: 0px;
+}
+.cards-menu h4 {
+  margin: 0px;
+  font-size: 12px;
+  font-weight: 500;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 213px;
+  white-space: nowrap;
+}
+.cards-menu h5 {
+  margin: 0px;
+  font-size: 15px;
+  padding-right: 10px;
 }
 
 .label {
   font-weight: 600;
-  font-size: 15px;
+  font-size: 14px;
 }
 
 .btn-check {
@@ -453,12 +472,15 @@ a {
   font-size: 20px;
 }
 
-.header {
+.header-title {
+  font-family: shrikhand;
   text-align: center;
-  padding-top: 20px;
-  padding-bottom: 6px;
+  margin-top: 12px;
+  margin-bottom: 6px;
+  font-weight: 500;
 }
-.header__arrow {
+
+.arrow {
   font-size: 20px;
   top: 1.3rem;
   left: 1rem;
@@ -466,14 +488,12 @@ a {
   border: none;
   background: initial;
 }
-.header .arrow-left {
+
+.arrow-left {
   color: #464646;
 }
-.header .arrow-left:hover {
+.arrow-left:hover {
   color: #ff79da;
-}
-.header__logo {
-  width: 50%;
 }
 
 .footer {
@@ -483,9 +503,9 @@ a {
 .footer__title {
   font-family: shrikhand;
   color: white;
-  font-size: 17px;
+  font-size: 16px;
   margin: 0px;
-  padding-bottom: 20px;
+  padding-bottom: 18px;
   font-weight: normal;
 }
 
@@ -493,30 +513,26 @@ a {
   list-style-type: none;
   padding-left: 0px;
   margin: 0px;
-  display: flex;
-  flex-direction: column;
-  gap: 6px;
 }
 .menu-footer__link {
   color: #fff;
-  font-size: 15px;
-}
-.menu-footer__link:hover a {
-  color: #ff79da;
+  font-size: 14px;
 }
 .menu-footer__link--icon {
   gap: 10px;
   display: flex;
   align-items: center;
 }
+.menu-footer__link--icon a {
+  display: flex;
+  flex-direction: row;
+  gap: 6px;
+}
 .menu-footer__link--icon .fa-utensils {
   font-size: 16px;
 }
 .menu-footer__link--icon .fa-handshake-angle {
   font-size: 11px;
-}
-.menu-footer__link:hover {
-  color: #ff79da;
 }
 
 /*# sourceMappingURL=styles.css.map */
