--- a/sass/components/_ancre_body.scss
+++ b/sass/components/_ancre_body.scss
@@ -7,4 +7,8 @@ a {
     text-decoration: none;
     cursor: pointer;
     color: $color-link;
+
+    &:hover {
+        color: $color-secondaire;
+    }
 }
