--- a/sass/components/_explication_fonctionnement.scss
+++ b/sass/components/_explication_fonctionnement.scss
@@ -3,18 +3,19 @@
     flex-direction: column;
     justify-content: space-around;
     flex-wrap: wrap;
-    padding: nth($list: $padding, $n: 7);
+    padding-left: nth($list: $padding, $n: 3);
     margin-bottom: nth($list: $margin, $n: 2);
 
     &__title {
         font-weight: 700;
     }
 
-    .btn-acceuil {
+    &__site {
         display: flex;
         flex-direction: column;
         justify-content: space-around;
         flex-wrap: wrap;
+        padding-left: nth($list: $padding, $n: 4);
 
         & ul {
             margin: nth($list: $margin, $n: 1);
@@ -24,48 +25,49 @@
         & li {
             list-style: none;
         }
+    }
+}
 
-        &__menu {
-            background-color: rgba(240, 240, 240, 0.4705882353);
-            box-shadow: rgb(202 200 200 / 72%) 0px 5px 9px;
-            padding: nth($list: $padding, $n: 8);
-            margin-bottom: nth($list: $margin, $n: 3);
-            border-radius: 16px;
-            border: none;
-            width: nth($list: $width, $n: 6);
-            display: flex;
-            flex-direction: row;
-            align-items: center;
-            gap: 20px;
+.explication {
+    background-color: rgba(240, 240, 240, 0.4705882353);
+    box-shadow: rgb(202 200 200 / 72%) 0px 5px 9px;
+    padding: 26px 24px;
+    margin-bottom: nth($list: $margin, $n: 3);
+    border-radius: 16px;
+    border: none;
+    width: nth($list: $width, $n: 6);
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 20px;
 
-            .number {
-                border: 2px solid $color-primaire;
-                padding: 5px 7px 2px 7px;
-                border-radius: 25px;
-                margin: nth($list: $margin, $n: 1);
-                position: absolute;
-                left: 7px;
-                font-size: nth($list: $size, $n: 8);
-                background: $color-primaire;
-                color: $color-link;
-            }
-            
-            .text-number {
-                font-size: nth($list: $size, $n: 2);
-            }
+    &--3 {
+        background: lighten($color-primaire, 35%);
+    }
+
+    &__number {
+    border: 2px solid $color-primaire;
+    padding: 5px 7px 2px 7px;
+    border-radius: 25px;
+    margin: nth($list: $margin, $n: 1);
+    position: absolute;
+    left: 15px;
+    font-size: nth($list: $size, $n: 8);
+    background: $color-primaire;
+    color: $color-link;
+    }
         
-            &--3 {
-                background: lighten($color-primaire, 35%);
-            }
 
-            .color {
-                color: gray;
-                font-size: nth($list: $size, $n: 3);
+    &__icon {
+    color: gray;
+    font-size: nth($list: $size, $n: 4);
 
-                &--3 {
-                    color: $color-primaire;
-                }
-            }
+        &--3 {
+        color: $color-primaire;
         }
+    }
+
+    &__text {
+        font-size: nth($list: $size, $n: 2);
     }
 }
