--- a/sass/components/_list-resto.scss
+++ b/sass/components/_list-resto.scss
@@ -2,10 +2,14 @@
     background-color: $background-gris-clair;
     padding: nth($list: $padding, $n: 3);
 
+    & h3 {
+        font-size: 21px;
+    }
 
     .restaurant {
         display: flex;
         flex-direction: column;
+        
 
         &__article {
             width: nth($list: $width, $n: 3);
@@ -46,7 +50,7 @@
             display: flex;
             flex-direction: column;
             gap: 3px;
-            padding: nth($list: $padding, $n: 9);
+            padding: nth($list: $padding, $n: 8);
             color: black;
 
         }
