--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -3,9 +3,11 @@
     padding: nth($list: $padding, $n: 2);
 
     &__title {
-        @include police-titre;
+        font-family: shrikhand;
+        color: white;
+        font-size: nth($list: $size, $n: 3);
         margin: nth($list: $margin, $n: 1);
-        padding-bottom: nth($list: $padding, $n: 3);
+        padding-bottom: nth($list: $padding, $n: 6);
         font-weight: normal;
     }    
 }
@@ -13,20 +15,20 @@
     list-style-type: none;
     padding-left: nth($list: $padding, $n: 1);
     margin: nth($list: $margin, $n: 1);
-    display: flex;
-    flex-direction: column;
-    gap: 6px;
+    
 
     &__link {
         color: $color-link;
         font-size: nth($list: $size, $n: 2);
-
-        &:hover a {
-            color:  $color-secondaire;
-        }
         
         &--icon {
             @include link-footer;
+
+            & a {
+                display: flex;
+                flex-direction: row;
+                gap: 6px;
+            }
         
             .fa-utensils {
                 font-size: nth($list: $size, $n: 3);
@@ -34,11 +36,6 @@
             .fa-handshake-angle {
                 font-size: nth($list: $size, $n: 1);
             }
-        }
-        
-        
-        &:hover {
-            color:$color-secondaire;
         }
     }
 }
