--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -4,6 +4,7 @@
 @import "./utils/keyframes";
 
 @import "./components/form_accueil.scss";
+@import "./components/load-spinner";
 @import "./components/list-resto.scss";
 @import "./components/animation-plats.scss";
 @import "./components/ancre_body.scss";
