--- a/css/styles.css
+++ b/css/styles.css
@@ -456,17 +456,16 @@ a:hover {
   border: none;
   border-radius: 0px 15px 15px 0px;
   background: #99e2d0;
-  padding: 22px 20px;
+  padding: 20px 18px;
   right: 14px;
-  margin-top: -53px;
+  margin-top: -49px;
   position: absolute;
 }
 .cards-menu__align-prix {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  align-items: center;
-  padding-top: 4px;
+  align-items: flex-end;
   margin: 0px;
 }
 .cards-menu h3 {
@@ -480,6 +479,9 @@ a:hover {
 .cards-menu__detail {
   margin: 0px;
   max-width: 79%;
+}
+.cards-menu dd {
+  margin: 0px;
 }
 .cards-menu h4 {
   margin: 0px;
