--- a/sass/components/_choix_plats_restos.scss
+++ b/sass/components/_choix_plats_restos.scss
@@ -68,9 +68,9 @@
             border: none;
             border-radius: 0px 15px 15px 0px;
             background: $color-tertiaire;
-            padding: 22px 20px;
+            padding: 20px 18px;
             right: 14px;
-            margin-top: -53px;
+            margin-top: -49px;
             position: absolute;
         }
     }
@@ -81,8 +81,7 @@
         display: flex;
         flex-direction: row;
         justify-content: space-between;
-        align-items: center;
-        padding-top: 4px;
+        align-items: flex-end;
         margin: nth($list: $margin, $n: 1);
     }
     
@@ -98,6 +97,10 @@
     &__detail {
         margin: nth($list: $margin, $n: 1);
         max-width: 79%;
+    }
+
+    & dd {
+        margin: nth($list: $margin, $n: 1);
     }
 
     & h4 {
