--- a/css/styles.css
+++ b/css/styles.css
@@ -9,14 +9,15 @@
 @keyframes apparition {
   0% {
     transform: translate(0px, 10px);
-    opacity: 0%;
+    opacity: 0;
   }
   50% {
     transform: translate(0px, 5px);
-    opacity: 0.1%;
+    opacity: 0.1;
   }
   100% {
     transform: translate(0px, 0px);
+    visibility: visible;
   }
 }
 @keyframes checkbox {
@@ -51,9 +52,11 @@
   from {
     opacity: 0.5;
     background: #000;
+    cursor: progress;
   }
   to {
     opacity: 0;
+    visibility: hidden;
   }
 }
 .explorer-restos {
@@ -83,16 +86,10 @@
   animation: load 2s both;
   animation-delay: 3s;
 }
-.load:hover {
-  display: none;
-}
 .load__spinner {
   color: #99e2d0;
   font-size: 112px;
   margin-top: 17rem;
-}
-.load__spinner:hover {
-  display: none;
 }
 
 .list-resto {
@@ -145,6 +142,7 @@
 }
 .list-resto .restaurant h4 {
   margin: 0px;
+  font-weight: 700;
 }
 .list-resto .restaurant h5 {
   margin: 0px;
@@ -153,41 +151,52 @@
 }
 
 .cards-menu--entree-1 {
-  animation: apparition 4s;
+  animation: apparition 2s both;
+  animation-delay: 1s;
 }
 .cards-menu--entree-2 {
-  animation: apparition 6s;
+  animation: apparition 2s both;
+  animation-delay: 2s;
 }
 .cards-menu--entree-3 {
-  animation: apparition 8s;
+  animation: apparition 2s both;
+  animation-delay: 3s;
 }
 .cards-menu--plat-1 {
-  animation: apparition 12s;
+  animation: apparition 2s both;
+  animation-delay: 6s;
 }
 .cards-menu--plat-2 {
-  animation: apparition 14s;
+  animation: apparition 2s both;
+  animation-delay: 7s;
 }
 .cards-menu--plat-3 {
-  animation: apparition 16s;
+  animation: apparition 2s both;
+  animation-delay: 8s;
 }
 .cards-menu--dessert-1 {
-  animation: apparition 20s;
+  animation: apparition 2s both;
+  animation-delay: 11s;
 }
 .cards-menu--dessert-2 {
-  animation: apparition 22s;
+  animation: apparition 2s both;
+  animation-delay: 12s;
 }
 .cards-menu--dessert-3 {
-  animation: apparition 24s;
+  animation: apparition 2s both;
+  animation-delay: 13s;
 }
 
 .titre-section--entree {
-  animation: apparition 2s;
+  animation: apparition 2s both;
 }
 .titre-section--plat {
-  animation: apparition 10s;
+  animation: apparition 2s both;
+  animation-delay: 5s;
 }
 .titre-section--dessert {
-  animation: apparition 18s;
+  animation: apparition 2s both;
+  animation-delay: 10s;
 }
 
 .validation-plat {
@@ -311,8 +320,7 @@ a:hover {
   margin-top: 28px;
 }
 .border-heart:active {
-  color: white;
-  z-index: 2;
+  visibility: hidden;
 }
 .border-heart:active + .heart-colorer {
   transform: scale(1);
@@ -324,10 +332,6 @@ a:hover {
 
 .heart-colorer {
   color: white;
-  position: absolute;
-  background-color: initial;
-  border: none;
-  z-index: 2;
   transform: scaley(0);
   transition: transform 300ms;
   transform-origin: bottom;
@@ -408,7 +412,7 @@ a:hover {
 }
 .header-form__title {
   font-family: shrikhand;
-  font-size: 26px;
+  font-size: 24px;
   font-weight: 500;
   padding-top: 30px;
   padding-left: 20px;
@@ -423,10 +427,11 @@ a:hover {
   border-bottom: 4px solid #99e2d0;
   width: 38px;
   padding-bottom: 6px;
-  margin-top: 40px;
+  margin-top: 30px;
   font-size: 16px;
   margin-left: 20px;
   font-weight: 500;
+  visibility: hidden;
 }
 .titre-section--espace {
   margin-left: 50px;
@@ -440,6 +445,7 @@ a:hover {
   box-shadow: rgba(91, 91, 91, 0.5019607843) 0px 0px 20px;
   margin-bottom: 14px;
   cursor: pointer;
+  visibility: hidden;
 }
 .cards-menu:hover {
   box-shadow: rgba(40, 40, 40, 0.5019607843) 0px 0px 20px;
@@ -457,7 +463,7 @@ a:hover {
   border-radius: 0px 15px 15px 0px;
   background: #99e2d0;
   padding: 20px 18px;
-  right: 14px;
+  right: 0px;
   margin-top: -49px;
   position: absolute;
 }
@@ -470,7 +476,7 @@ a:hover {
 }
 .cards-menu h3 {
   margin: 0px;
-  font-size: 16px;
+  font-size: 15px;
   overflow: hidden;
   text-overflow: ellipsis;
   max-width: 86%;
@@ -490,6 +496,9 @@ a:hover {
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
+}
+.cards-menu .titre-gras {
+  font-weight: 700;
 }
 .cards-menu h5 {
   margin: 0px;
@@ -517,7 +526,7 @@ a:hover {
   font-weight: 500;
 }
 
-.arrow {
+.header-return {
   font-size: 20px;
   top: 1.3rem;
   left: 1rem;
@@ -525,11 +534,10 @@ a:hover {
   border: none;
   background: initial;
 }
-
-.arrow-left {
+.header-return__arrow-left {
   color: #464646;
 }
-.arrow-left:hover {
+.header-return__arrow-left:hover {
   color: #ff79da;
 }
 
@@ -555,15 +563,10 @@ a:hover {
   color: #fff;
   font-size: 14px;
 }
-.menu-footer__link--icon {
-  gap: 10px;
-  display: flex;
-  align-items: center;
-}
 .menu-footer__link--icon a {
   display: flex;
-  flex-direction: row;
-  gap: 6px;
+  gap: 8px;
+  align-items: center;
 }
 .menu-footer__link--icon .fa-utensils {
   font-size: 16px;
