--- a/sass/utils/_keyframes.scss
+++ b/sass/utils/_keyframes.scss
@@ -1,14 +1,15 @@
 @keyframes apparition {
   0% {
     transform: translate(0px, 10px);
-    opacity: 0%;
+    opacity: 0;
   }
   50% {
     transform: translate(0px, 5px);
-    opacity: 0.1%;
+    opacity: 0.1;
   }
   100% {
     transform: translate(0px, 0px);
+    visibility: visible;
   }
 }
 
@@ -45,8 +46,10 @@
   from {
     opacity: 0.5;
     background: #000;
+    cursor: progress;
   }
   to {
     opacity: 0;
+    visibility:hidden;
   }
 }
