--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -6,14 +6,16 @@
 @import "./components/form_accueil.scss";
 @import "./components/load-spinner";
 @import "./components/list-resto.scss";
-@import "./components/animation-plats.scss";
+@import "./components/animation-mobile.scss";
 @import "./components/ancre_body.scss";
 @import "./components/explication_fonctionnement.scss";
 @import "./components/recherche_accueil.scss";
 @import "./layout/icon_heart.scss";
-@import "./components/btn.scss";
+@import "./components/btn-mobile.scss";
 
-@import "./components/choix_plats_restos.scss";
+@import "./components/choix_plats_mobile.scss";
 
 @import "./layout/header.scss";
 @import "./layout/footer.scss";
+
+@import "./tablette/main_tablette.scss";
