--- a/sass/components/_recherche_accueil.scss
+++ b/sass/components/_recherche_accueil.scss
@@ -8,6 +8,7 @@
         padding: nth($list: $padding, $n: 6);
         display: flex;
         justify-content: center;
+        width: 100%;
 
         &__adresse {
             background-color: initial;
