--- a/sass/layout/_icon_heart.scss
+++ b/sass/layout/_icon_heart.scss
@@ -31,7 +31,7 @@
   font-size: nth($list: $size, $n: 6);
   position: absolute;
   left: 78%;
-  margin-top: -18%;
+  margin-top: -4rem;
   border: none;
   background: initial;
   cursor: pointer;
