--- a/sass/utils/_keyframes.scss
+++ b/sass/utils/_keyframes.scss
@@ -41,6 +41,14 @@
     transform: translate(-50px, 0px);
   }
 }
+@keyframes prix-tablette {
+  from {
+    transform: translate(0px, 0px);
+  }
+  to {
+    transform: translate(-66px, 0px);
+  }
+}
 
 @keyframes load {
   from {
