--- a/sass/components/_choix_plats_mobile.scss
+++ b/sass/components/_choix_plats_mobile.scss
@@ -1,6 +1,6 @@
 .image-restaurant {
     width: nth($list: $width, $n: 3);
-    height: 230px;
+    height: nth($list: $height, $n: 5);
     object-fit: cover;
 }
 
@@ -31,7 +31,7 @@
 
 .titre-section{
     border-bottom: 4px solid $color-tertiaire;
-    width: 38px;
+    width: nth($list: $width, $n: 2);
     padding-bottom: 6px;
     margin-top: 30px;
     font-size: nth($list: $size, $n: 3);
@@ -107,7 +107,7 @@
 
     & h4 {
         margin: nth($list: $margin, $n: 1);
-        font-size: 12px;
+        font-size: nth($list: $size, $n: 8);
         font-weight: 500;
         overflow: hidden;
         text-overflow: ellipsis;
