--- a/sass/tablette/_btn-tablette.scss
+++ b/sass/tablette/_btn-tablette.scss
@@ -1,12 +1,12 @@
 .commander {
-    font-size: 20px;
+    font-size: nth($list: $size, $n: 5);
     border-radius: 34px;
-    padding: 20px;
+    padding: nth($list: $padding, $n: 3);
 }
 
 .btn-explorez {
-    font-size: 17px;
+    font-size: nth($list: $size, $n: 4);
     border-radius: 35px;
-    width: 254px;
-    padding: 20px;
+    width: nth($list: $width, $n: 1);
+    padding: nth($list: $padding, $n: 3);
 }
