--- a/sass/tablette/_footer-tablette.scss
+++ b/sass/tablette/_footer-tablette.scss
@@ -1,7 +1,7 @@
 .footer {
 
     &__title {
-        font-size: 20px;
+        font-size: nth($list: $size, $n: 5);
         padding-bottom: nth($list: $padding, $n: 6);
         font-weight: normal;
     }    
@@ -12,6 +12,6 @@
     
 
     &__link {
-        font-size: 17px;
+        font-size: nth($list: $size, $n: 4);
     }
 }
