--- a/sass/tablette/_main_tablette.scss
+++ b/sass/tablette/_main_tablette.scss
@@ -1,14 +1,15 @@
-@media all and (min-width: 500px) and (max-width: 800px) {
+@media all and (min-width: 500px) {
 
-@import "choix_plats-tablette.scss";
-@import "form-accueil-tablette.scss";
-@import "animation-tablette.scss";
-@import "btn-tablette";
-@import "header-tablette.scss";
-@import "footer-tablette.scss";
-@import "recherche-accueil-tablette.scss";
-@import "fonctionnement-site-tablette.scss";
-@import "list-resto-tablette.scss";
-@import "heart-tablette.scss";
+@import "components/choix_plats_tablette.scss";
+@import "components/form_accueil_tablette.scss";
+@import "components/animation_tablette.scss";
+@import "components/btn_tablette.scss";
+@import "components/recherche_accueil_tablette.scss";
+@import "components/fonctionnement_site_tablette.scss";
+@import "components/list_resto_tablette.scss";
+
+@import "layout/header_tablette";
+@import "layout/footer_tablette.scss";
+@import "layout/heart_tablette.scss";
 
 }
